--- a/source/package.json
+++ b/source/package.json
@@ -4,11 +4,12 @@
   "author": "Thomas Scheibitz",
   "private": false,
   "devDependencies": {
+    "escape-html": "^1.0.3",
     "gulp": "^3.9",
     "gulp-autoprefixer": "^5.0",
     "gulp-if": "^2.0",
     "gulp-plumber": "^1.2",
-    "gulp-replace": "^1.0",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0",
     "gulp-uglify": "^3.0",
     "gulp-watch": "^5.0"
